--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 05:05:03 2018</p>
+         Last Run: Thu Nov  1 06:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>7</td>
-                        <td>79</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
@@ -46,7 +46,7 @@
                         <td>4</td>
                         <td>2</td>
                         <td>6</td>
-                        <td>66</td>
+                        <td>65</td>
                         <td>1</td>
                         <td>8</td>
                         <td>SSW</td>
@@ -171,8 +171,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "79",
-                 "66",
+                 "78",
+                 "65",
                  "55"
                ]
              },
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 05:05:03 2018</p>
+         Last Run: Thu Nov  1 06:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,36 +248,36 @@
                         <td>Chance of Rain</td>
                         <td>7</td>
                         <td>5</td>
-                        <td>46</td>
+                        <td>44</td>
                         <td>58</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>WNW</td>
-                        <td>95</td>
+                        <td>88</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Chance of Rain</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>34</td>
+                        <td>47</td>
                         <td>57</td>
                         <td>1</td>
                         <td>11</td>
                         <td>WNW</td>
-                        <td>94</td>
+                        <td>91</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Chance of Rain</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>32</td>
+                        <td>50</td>
                         <td>55</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>W</td>
-                        <td>94</td>
+                        <td>91</td>
                      </tr>
                   </tbody>
                </table>
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "46",
-                 "34",
-                 "32"
+                 "44",
+                 "47",
+                 "50"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "95",
-                 "94",
-                 "94"
+                 "88",
+                 "91",
+                 "91"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 05:05:03 2018</p>
+         Last Run: Thu Nov  1 06:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Nov 06, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -460,39 +460,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Overcast</td>
-                        <td>-2</td>
-                        <td>-4</td>
-                        <td>9</td>
-                        <td>81</td>
+                        <td>Snow Showers</td>
+                        <td>-3</td>
+                        <td>-6</td>
+                        <td>31</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>6</td>
                         <td>NW</td>
-                        <td>86</td>
+                        <td>88</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>7</td>
-                        <td>82</td>
+                        <td>31</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>6</td>
                         <td>NW</td>
-                        <td>85</td>
+                        <td>88</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>24</td>
+                        <td>41</td>
                         <td>83</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>NW</td>
-                        <td>83</td>
+                        <td>NNW</td>
+                        <td>89</td>
                      </tr>
                   </tbody>
                </table>
@@ -519,7 +519,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-4",
+                 "-6",
                  "-6",
                  "-6"
                ]
@@ -531,7 +531,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-2",
+                 "-3",
                  "-3",
                  "-3"
                ]
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "9",
-                 "7",
-                 "24"
+                 "31",
+                 "31",
+                 "41"
                ]
              },
              {
@@ -601,8 +601,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "81",
-                 "82",
+                 "80",
+                 "80",
                  "83"
                ]
              },
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "86",
-                 "85",
-                 "83"
+                 "88",
+                 "88",
+                 "89"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 05:05:03 2018</p>
+         Last Run: Thu Nov  1 06:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -677,37 +677,37 @@
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-5</td>
-                        <td>-9</td>
-                        <td>11</td>
-                        <td>71</td>
-                        <td>0</td>
-                        <td>8</td>
-                        <td>WNW</td>
-                        <td>50</td>
-                     </tr>
-                     <tr>
-                        <td>10:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-6</td>
-                        <td>-10</td>
+                        <td>-8</td>
                         <td>11</td>
                         <td>73</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>NNW</td>
-                        <td>58</td>
+                        <td>6</td>
+                        <td>NNE</td>
+                        <td>57</td>
+                     </tr>
+                     <tr>
+                        <td>10:00 PM</td>
+                        <td>Mostly Cloudy</td>
+                        <td>-6</td>
+                        <td>-9</td>
+                        <td>11</td>
+                        <td>73</td>
+                        <td>0</td>
+                        <td>6</td>
+                        <td>NE</td>
+                        <td>65</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>-6</td>
-                        <td>-10</td>
+                        <td>-9</td>
                         <td>13</td>
-                        <td>75</td>
+                        <td>77</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>S</td>
-                        <td>61</td>
+                        <td>6</td>
+                        <td>E</td>
+                        <td>70</td>
                      </tr>
                   </tbody>
                </table>
@@ -734,9 +734,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
+                 "-8",
                  "-9",
-                 "-10",
-                 "-10"
+                 "-9"
                ]
              },
              {
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "71",
                  "73",
-                 "75"
+                 "73",
+                 "77"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "50",
-                 "58",
-                 "61"
+                 "57",
+                 "65",
+                 "70"
                ]
              }
            ]
