--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 07:05:06 2018</p>
+         Last Run: Thu Nov  1 08:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>7</td>
-                        <td>78</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>45</td>
+                        <td>46</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -46,10 +46,10 @@
                         <td>4</td>
                         <td>2</td>
                         <td>5</td>
-                        <td>65</td>
+                        <td>67</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>SSW</td>
+                        <td>SW</td>
                         <td>48</td>
                      </tr>
                      <tr>
@@ -58,9 +58,9 @@
                         <td>6</td>
                         <td>4</td>
                         <td>4</td>
-                        <td>55</td>
+                        <td>56</td>
                         <td>1</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>SSW</td>
                         <td>49</td>
                      </tr>
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "78",
-                 "65",
-                 "55"
+                 "79",
+                 "67",
+                 "56"
                ]
              },
              {
@@ -182,7 +182,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "45",
+                 "46",
                  "48",
                  "49"
                ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 07:05:06 2018</p>
+         Last Run: Thu Nov  1 08:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,7 +248,7 @@
                         <td>Chance of Rain</td>
                         <td>7</td>
                         <td>5</td>
-                        <td>46</td>
+                        <td>44</td>
                         <td>59</td>
                         <td>1</td>
                         <td>11</td>
@@ -260,7 +260,7 @@
                         <td>Chance of Rain</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>51</td>
+                        <td>46</td>
                         <td>58</td>
                         <td>1</td>
                         <td>11</td>
@@ -272,12 +272,12 @@
                         <td>Chance of Rain</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>54</td>
-                        <td>56</td>
+                        <td>50</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>W</td>
-                        <td>92</td>
+                        <td>WNW</td>
+                        <td>91</td>
                      </tr>
                   </tbody>
                </table>
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "44",
                  "46",
-                 "51",
-                 "54"
+                 "50"
                ]
              },
              {
@@ -388,7 +388,7 @@
                "data":[
                  "59",
                  "58",
-                 "56"
+                 "55"
                ]
              },
              {
@@ -399,7 +399,7 @@
                "data":[
                  "88",
                  "91",
-                 "92"
+                 "91"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 07:05:06 2018</p>
+         Last Run: Thu Nov  1 08:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Nov 06, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -463,7 +463,7 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-3</td>
-                        <td>36</td>
+                        <td>37</td>
                         <td>78</td>
                         <td>0</td>
                         <td>5</td>
@@ -488,7 +488,7 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>36</td>
-                        <td>80</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>6</td>
                         <td>NNW</td>
@@ -590,7 +590,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "36",
+                 "37",
                  "36",
                  "36"
                ]
@@ -603,7 +603,7 @@
                "data":[
                  "78",
                  "78",
-                 "80"
+                 "81"
                ]
              },
              {
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 07:05:06 2018</p>
+         Last Run: Thu Nov  1 08:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -679,7 +679,7 @@
                         <td>-6</td>
                         <td>-9</td>
                         <td>5</td>
-                        <td>73</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>6</td>
                         <td>ESE</td>
@@ -695,19 +695,19 @@
                         <td>0</td>
                         <td>6</td>
                         <td>E</td>
-                        <td>61</td>
+                        <td>62</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>-7</td>
                         <td>-10</td>
-                        <td>12</td>
+                        <td>11</td>
                         <td>77</td>
                         <td>0</td>
                         <td>6</td>
                         <td>ESE</td>
-                        <td>66</td>
+                        <td>67</td>
                      </tr>
                   </tbody>
                </table>
@@ -807,7 +807,7 @@
                "data":[
                  "5",
                  "5",
-                 "12"
+                 "11"
                ]
              },
              {
@@ -816,7 +816,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "73",
+                 "72",
                  "74",
                  "77"
                ]
@@ -828,8 +828,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "53",
-                 "61",
-                 "66"
+                 "62",
+                 "67"
                ]
              }
            ]
